# caffe_01

./: GUIA_GITHUB.md  GUIA_GITHUB_SIMPLE.md  Makefile  main.py  pyproject.toml  requirements.txt  settings.json
pcof/: db.sqlite3  manage.py
pcof/blog/: admin.py  models.py  views.py
pcof/blog/migrations/: 0001_initial.py
pcof/blog/templates/blog/: Blog.html
pcof/core/: urls.py  views.py
pcof/pages/: models.py
pcof/pages/migrations/: 0003_auto_20180306_1857.py  0004_alter_page_id.py
pcof/pcof/: asgi.py  settings.py  urls.py  wsgi.py
pcof/services/: admin.py  models.py  urls.py  views.py
pcof/services/migrations/: 0001_initial.py  0002_alter_services_options.py
pcof/services/templates/services/: Services.html
pcof/social/: admin.py  apps.py  models.py
pcof/social/migrations/: 0001_initial.py  0002_alter_link_options.py
