[project]
name = "cafe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.4",
    "django-ckeditor-5>=0.2.18",
    "gunicorn>=23.0.0",
    "pillow>=11.3.0",
]

[dependency-groups]
dev = [
    "pylint>=3.3.7",
    "pylint-celery>=0.3",
    "pylint-django>=2.6.1",
]
